radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 7878
  selector:
    app: radarr
  type: LoadBalancer
