radarr/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: radarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`radarr.anasjabri.com`)
      kind: Rule
      services:
      - name: radarr
        port: 8080
      middlewares:
      - name: basic-auth
        namespace: kube-system
      - name: redirect-scheme
        namespace: kube-system
  tls:
    secretName: radarr.anasjabri.com-tls
